[package]
name = "rust-json-parser"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_json_parser"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module"], optional = true }
[features]
default = ["python"]
python = ["pyo3"]

[lints.clippy]
uninlined_format_args = "warn"
